updates boxplot notebook

--- a/boxplot.ipynb
+++ b/boxplot.ipynb
@@ -9,6 +9,8 @@
    "source": [
     "%matplotlib widget\n",
     "\n",
+    "# Execute this cell by pressing Shift-Enter\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import ipywidgets as widgets\n",
@@ -341,9 +343,18 @@
     "display(main_content)\n",
     "plt.tight_layout(rect=[0, 0, 1, 0.95])\n",
     "plt.show()\n",
+    "fig.canvas.draw_idle() # refresh plot canvas\n",
     "\n",
-    "# Execute this cell (then press Reset Points Button if you cannot see the plots yet)"
+    "# Execute this cell by pressing Shift-Enter"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d1876ff-9a73-4e20-868f-26a7489417b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
