adds notch option

--- a/boxplot.ipynb
+++ b/boxplot.ipynb
@@ -77,6 +77,9 @@
     "    'outlier': '#E53935'\n",
     "}\n",
     "\n",
+    "# Global variable for notch option\n",
+    "notch_enabled = False\n",
+    "\n",
     "# Initialize random number generator with default seed\n",
     "rng = np.random.default_rng(42)\n",
     "\n",
@@ -127,7 +130,7 @@
     "ax_scatter.set_ylim(0, 100)\n",
     "\n",
     "# Plot initial boxplot\n",
-    "boxplot = ax_box.boxplot(y, widths=0.6, patch_artist=True, showfliers=True)\n",
+    "boxplot = ax_box.boxplot(y, widths=0.6, patch_artist=True, showfliers=True, notch=notch_enabled)\n",
     "# Style the boxplot\n",
     "for element in ['boxes', 'whiskers', 'fliers', 'medians', 'caps']:\n",
     "    plt.setp(boxplot[element], color=colors['primary'])\n",
@@ -154,7 +157,7 @@
     "    # Clear and redraw boxplot\n",
     "    ax_box.clear()\n",
     "    # Calculate boxplot statistics\n",
-    "    bp = ax_box.boxplot(y, widths=0.6, patch_artist=True, showfliers=True)\n",
+    "    bp = ax_box.boxplot(y, widths=0.6, patch_artist=True, showfliers=True, notch=notch_enabled)\n",
     "    # Style the boxplot\n",
     "    for element in ['boxes', 'whiskers', 'fliers', 'medians', 'caps']:\n",
     "        plt.setp(bp[element], color=colors['primary'])\n",
@@ -293,11 +296,24 @@
     "    layout=widgets.Layout(width='100px')\n",
     ")\n",
     "\n",
+    "notch_checkbox = widgets.Checkbox(\n",
+    "    value=notch_enabled,\n",
+    "    description='Notched Boxplot',\n",
+    "    indent=False,\n",
+    "    layout=widgets.Layout(width='auto')\n",
+    ")\n",
+    "\n",
+    "def update_notch(change):\n",
+    "    global notch_enabled\n",
+    "    notch_enabled = change['new']\n",
+    "    update_boxplot()\n",
+    "\n",
     "# Set up event handlers\n",
     "reset_button.on_click(reset_data)\n",
     "dist_selector.observe(change_distribution, names='value')\n",
     "seed_input.observe(update_seed, names='value')\n",
     "n_points_input.observe(update_n_points, names='value')\n",
+    "notch_checkbox.observe(update_notch, 'value')\n",
     "\n",
     "# Mouse event handlers\n",
     "def on_pick(event):\n",
@@ -335,6 +351,7 @@
     "    widgets.Box([dist_selector], layout=widgets.Layout(margin='0 10px 0 0')),\n",
     "    widgets.Box([seed_input], layout=widgets.Layout(margin='0 10px 0 0')),\n",
     "    widgets.Box([n_points_input], layout=widgets.Layout(margin='0 10px 0 0')),\n",
+    "    widgets.Box([notch_checkbox], layout=widgets.Layout(margin='0 10px 0 0')),\n",
     "    reset_button\n",
     "], layout=widgets.Layout(justify_content='flex-start', margin='0 0 15px 0'))\n",
     "main_content = widgets.VBox([controls, explanation_container, points_list_container])\n",
@@ -349,6 +366,14 @@
     "\n",
     "# Execute this cell by pressing Shift-Enter (re-execute if plots still missing)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75ce1312-a699-4391-9832-5cc39e069d1d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
