--- a/cook.ipynb
+++ b/cook.ipynb
@@ -371,6 +371,345 @@
    "id": "08507750-0cc3-448d-a4dc-e7e57caac04c",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "%matplotlib widget\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display, HTML\n",
+    "\n",
+    "# ----------------------------------------------------------\n",
+    "# Styling\n",
+    "# ----------------------------------------------------------\n",
+    "display(HTML(\"\"\"\n",
+    "<style>\n",
+    "    .widget-button {\n",
+    "        background-color: #1976D2 !important;\n",
+    "        color: white !important;\n",
+    "        border: none !important;\n",
+    "        font-weight: bold !important;\n",
+    "        border-radius: 4px !important;\n",
+    "        height: 32px !important;\n",
+    "        margin-top: 5px !important;\n",
+    "        text-transform: none !important;\n",
+    "    }\n",
+    "    .widget-button:hover {\n",
+    "        background-color: #1565C0 !important;\n",
+    "        transform: translateY(-1px);\n",
+    "        box-shadow: 0 2px 4px rgba(0,0,0,0.2);\n",
+    "    }\n",
+    "    .widget-button:active {\n",
+    "        background-color: #0D47A1 !important;\n",
+    "    }\n",
+    "    .control-group {\n",
+    "        display: flex;\n",
+    "        align-items: center;\n",
+    "        margin-right: 15px;\n",
+    "    }\n",
+    "    .control-group label {\n",
+    "        margin-right: 5px;\n",
+    "        min-width: 120px;\n",
+    "    }\n",
+    "    .explanation-container {\n",
+    "        margin: 10px 0;\n",
+    "        padding: 10px;\n",
+    "        border: 1px solid #E0E0E0;\n",
+    "        border-radius: 5px;\n",
+    "    }\n",
+    "</style>\n",
+    "\"\"\"))\n",
+    "\n",
+    "colors = {\n",
+    "    'primary': '#1976D2',\n",
+    "    'secondary': '#FF5722',\n",
+    "    'background': '#F5F7FA',\n",
+    "    'grid': '#E0E0E0',\n",
+    "    'text': '#212121',\n",
+    "    'residual': '#1976D2',\n",
+    "    'leverage': '#00796B',\n",
+    "    'cook': '#D32F2F',\n",
+    "    'regression': '#D32F2F'\n",
+    "}\n",
+    "\n",
+    "rng = np.random.default_rng(1337)\n",
+    "\n",
+    "# ----------------------------------------------------------\n",
+    "# Data generation\n",
+    "# ----------------------------------------------------------\n",
+    "def generate_data(n=15, distribution='normal', seed=None):\n",
+    "    global rng\n",
+    "    if seed is not None:\n",
+    "        rng = np.random.default_rng(seed)\n",
+    "    \n",
+    "    if distribution == 'normal':\n",
+    "        x = np.sort(rng.normal(50, 20, n))\n",
+    "        y = 2 + 0.8 * x + rng.normal(0, 8, n)\n",
+    "    elif distribution == 'unequal':\n",
+    "        x = np.sort(np.linspace(10, 90, n) + rng.normal(0, 2, n))\n",
+    "        y = 2 + 0.8 * x + rng.normal(0, x/10, n)  # Heteroscedasticity\n",
+    "    elif distribution == 'data':\n",
+    "        x = np.array([10.49,  6.13,  5.17, 13.63,  8.96,  7.74,  7.10,  9.88, 11.84, 11.85,\n",
+    "     8.83, 10.96, 16.56,  2.76,  3.35,  8.01, 13.42,  9.45, 14.55,  9.37,\n",
+    "    11.13, 11.14, 11.23,  7.54,  6.56,  9.73,  8.20, 12.12,  9.57,  9.74])\n",
+    "        y = np.array([12.49, 11.66,  2.11, 22.98, 14.38,  8.74,  7.13, 17.15, 15.58, 18.28,\n",
+    "    11.85, 19.57, 18.50, 10.46,  6.45,  5.15, 16.88, 17.59, 18.30, 13.27,\n",
+    "    14.37, 15.62, 16.85, 16.72, 11.97, 14.84,  7.27, 17.12, 11.98, 12.75])\n",
+    "    else:\n",
+    "        x = np.sort(rng.normal(50, 20, n))\n",
+    "        y = 2 + 0.8 * x + rng.normal(0, 8, n)\n",
+    "    \n",
+    "    return x, y\n",
+    "\n",
+    "# ----------------------------------------------------------\n",
+    "# Initial data\n",
+    "# ----------------------------------------------------------\n",
+    "n_points = 15\n",
+    "distribution = 'normal'\n",
+    "x_data, y_data = generate_data(n_points, distribution=distribution, seed=42)\n",
+    "\n",
+    "selected_point = None\n",
+    "\n",
+    "# ----------------------------------------------------------\n",
+    "# Matplotlib configuration\n",
+    "# ----------------------------------------------------------\n",
+    "plt.rcParams['font.family'] = 'sans-serif'\n",
+    "plt.rcParams['font.size'] = 10\n",
+    "plt.rcParams['axes.labelsize'] = 11\n",
+    "plt.rcParams['axes.titlesize'] = 13\n",
+    "plt.rcParams['xtick.labelsize'] = 9\n",
+    "plt.rcParams['ytick.labelsize'] = 9\n",
+    "plt.rcParams['axes.edgecolor'] = '#BDBDBD'\n",
+    "plt.rcParams['axes.linewidth'] = 1.2\n",
+    "\n",
+    "fig, (ax_reg, ax_lev, ax_cook) = plt.subplots(3, 1, figsize=(7.5, 9), sharex=False)\n",
+    "fig.suptitle('Interactive Regression Analysis', fontsize=15, fontweight='bold', y=0.98)\n",
+    "\n",
+    "# ----------------------------------------------------------\n",
+    "# Helper: compute regression, residuals, leverage, and Cook's distance\n",
+    "# ----------------------------------------------------------\n",
+    "def compute_regression_stats(x, y):\n",
+    "    \"\"\"Compute regression line, residuals, leverage, and Cook's distance\"\"\"\n",
+    "    # Linear regression: y = beta0 + beta1 * x\n",
+    "    X = np.column_stack([np.ones_like(x), x])\n",
+    "    beta = np.linalg.lstsq(X, y, rcond=None)[0]\n",
+    "    y_hat = X @ beta\n",
+    "    residuals = y - y_hat\n",
+    "    \n",
+    "    # Leverage (hat values)\n",
+    "    XtX_inv = np.linalg.inv(X.T @ X)\n",
+    "    H = X @ XtX_inv @ X.T\n",
+    "    h = np.diag(H)\n",
+    "    \n",
+    "    # Cook's distance\n",
+    "    n, p = len(x), 2\n",
+    "    mse = np.sum(residuals**2) / max(n - p, 1)\n",
+    "    cooks = (residuals**2 / (p * max(mse, 1e-12))) * (h / (1 - h)**2)\n",
+    "    \n",
+    "    return beta, y_hat, residuals, h, cooks\n",
+    "\n",
+    "# ----------------------------------------------------------\n",
+    "# Initial plots\n",
+    "# ----------------------------------------------------------\n",
+    "beta, y_hat, residuals, leverages, cooks = compute_regression_stats(x_data, y_data)\n",
+    "\n",
+    "# 1) Regression scatter + line\n",
+    "scat_reg = ax_reg.scatter(x_data, y_data, s=60, c=colors['residual'],\n",
+    "                         alpha=0.85, edgecolor='white', linewidth=1.2, picker=5, zorder=5)\n",
+    "line_reg, = ax_reg.plot(x_data, y_hat, color=colors['regression'], \n",
+    "                       linewidth=3, label='Regression', zorder=4)\n",
+    "ax_reg.set_ylabel('y', fontweight='bold')\n",
+    "ax_reg.set_title('Regression: Drag points to refit line')\n",
+    "ax_reg.grid(True, linestyle='--', alpha=0.6, color=colors['grid'])\n",
+    "\n",
+    "\n",
+    "# 2) Leverage plot\n",
+    "scat_lev = ax_lev.scatter(x_data, leverages, s=60, c=colors['leverage'],\n",
+    "                         alpha=0.85, edgecolor='white', linewidth=1.2)\n",
+    "#ax_lev.axhline(np.mean(leverages), color='#9E9E9E', linestyle='--', linewidth=1)\n",
+    "ax_lev.set_ylabel('Leverage $h_{ii}$', fontweight='bold')\n",
+    "ax_lev.set_title('Leverage of each point')\n",
+    "ax_lev.grid(True, linestyle='--', alpha=0.6, color=colors['grid'])\n",
+    "\n",
+    "# 3) Cook's distance plot\n",
+    "scat_cook = ax_cook.scatter(x_data, cooks, s=60, c=colors['cook'],\n",
+    "                           alpha=0.85, edgecolor='white', linewidth=1.2)\n",
+    "ax_cook.set_ylabel(\"Cook's distance\", fontweight='bold')\n",
+    "ax_cook.set_xlabel('x', fontweight='bold')\n",
+    "ax_cook.set_title('Cook\\'s distance of each point')\n",
+    "ax_cook.grid(True, linestyle='--', alpha=0.6, color=colors['grid'])\n",
+    "\n",
+    "\n",
+    "fig.tight_layout(rect=[0, 0, 1, 0.95])\n",
+    "\n",
+    "# ----------------------------------------------------------\n",
+    "# Widgets and explanation box\n",
+    "# ----------------------------------------------------------\n",
+    "explanation_out = widgets.Output()\n",
+    "\n",
+    "dist_selector = widgets.Dropdown(\n",
+    "    options=[('Normal', 'normal'),\n",
+    "             ('Unequal variance', 'unequal'),\n",
+    "             ('Example data', 'data')],\n",
+    "    value='normal',\n",
+    "    description='Preset:',\n",
+    "    style={'description_width': 'initial'},\n",
+    "    layout=widgets.Layout(width='230px')\n",
+    ")\n",
+    "\n",
+    "seed_input = widgets.BoundedIntText(\n",
+    "    value=42,\n",
+    "    min=0,\n",
+    "    max=1_000_000,\n",
+    "    step=1,\n",
+    "    description='Random seed:',\n",
+    "    style={'description_width': 'initial'},\n",
+    "    layout=widgets.Layout(width='160px')\n",
+    ")\n",
+    "\n",
+    "n_points_input = widgets.BoundedIntText(\n",
+    "    value=n_points,\n",
+    "    min=5,\n",
+    "    max=50,\n",
+    "    step=1,\n",
+    "    description='Points:',\n",
+    "    style={'description_width': 'initial'},\n",
+    "    layout=widgets.Layout(width='130px')\n",
+    ")\n",
+    "\n",
+    "reset_button = widgets.Button(\n",
+    "    description='Reset data',\n",
+    "    layout=widgets.Layout(width='150px', height='32px'),\n",
+    ")\n",
+    "reset_button.add_class('widget-button')\n",
+    "\n",
+    "# ----------------------------------------------------------\n",
+    "# Update functions\n",
+    "# ----------------------------------------------------------\n",
+    "def update_plots():\n",
+    "    global x_data, y_data, scat_reg, scat_lev, scat_cook, line_reg\n",
+    "    \n",
+    "    # Recompute everything\n",
+    "    beta, y_hat, residuals, h, c = compute_regression_stats(x_data, y_data)\n",
+    "    \n",
+    "    # Update regression plot\n",
+    "    scat_reg.set_offsets(np.column_stack([x_data, y_data]))\n",
+    "    line_reg.set_data(x_data, y_hat)\n",
+    "    \n",
+    "    # Update diagnostics\n",
+    "    scat_lev.set_offsets(np.column_stack([x_data, h]))\n",
+    "    scat_cook.set_offsets(np.column_stack([x_data, c]))\n",
+    "    \n",
+    "    # Adjust limits\n",
+    "    margin = 0.05\n",
+    "    x_range = x_data.max() - x_data.min()\n",
+    "    ax_reg.set_xlim(x_data.min() - 0.1*x_range, x_data.max() + 0.1*x_range)\n",
+    "    y_range = y_data.max() - y_data.min()\n",
+    "    ax_reg.set_ylim(y_data.min() - 0.1*y_range, y_data.max() + 0.1*y_range)\n",
+    "    \n",
+    "    ax_lev.set_xlim(x_data.min() - 0.1*x_range, x_data.max() + 0.1*x_range)\n",
+    "    ax_lev.set_ylim(max(0, h.min() - 0.02), h.max() + 0.05)\n",
+    "    ax_cook.set_xlim(x_data.min() - 0.1*x_range, x_data.max() + 0.1*x_range)\n",
+    "    ax_cook.set_ylim(0, max(c.max() * 1.1, 0.1))\n",
+    "    \n",
+    "    # Update explanation\n",
+    "    r2 = 1 - np.sum(residuals**2) / np.sum((y_data - np.mean(y_data))**2)\n",
+    "    with explanation_out:\n",
+    "        explanation_out.clear_output(wait=True)\n",
+    "        display(HTML(f\"\"\"\n",
+    "        <div class=\"explanation-container\">\n",
+    "            <h4 style=\"margin:0 0 8px 0; color:{colors['primary']}\">Live Statistics:</h4>\n",
+    "            <p><b>Regression:</b> $\\\\hat{{y}} = {beta[1]:.2f}x + {beta[0]:.2f}$ | \n",
+    "               <b>R²:</b> {r2:.3f} | \n",
+    "               <b>MSE:</b> {np.mean(residuals**2):.2f}</p>\n",
+    "            <ul style=\"margin:4px 0 0 18px; padding:0;\">\n",
+    "                <li><b>Top:</b> Data + regression line (drag any point)</li>\n",
+    "                <li><b>Middle:</b> Leverage values $h_{{ii}}$</li>\n",
+    "                <li><b>Bottom:</b> Cook's distances (influence)</li>\n",
+    "            </ul>\n",
+    "        </div>\n",
+    "        \"\"\"))\n",
+    "    \n",
+    "    fig.canvas.draw_idle()\n",
+    "\n",
+    "def reset_data(_=None):\n",
+    "    global x_data, y_data, n_points, distribution\n",
+    "    distribution = dist_selector.value\n",
+    "    n_points = n_points_input.value\n",
+    "    seed = seed_input.value\n",
+    "    \n",
+    "    x_data, y_data = generate_data(n_points, distribution=distribution, seed=seed)\n",
+    "    update_plots()\n",
+    "\n",
+    "def on_param_change(change):\n",
+    "    if change[\"name\"] == \"value\":\n",
+    "        reset_data()\n",
+    "\n",
+    "reset_button.on_click(reset_data)\n",
+    "dist_selector.observe(on_param_change, names='value')\n",
+    "seed_input.observe(on_param_change, names='value')\n",
+    "n_points_input.observe(on_param_change, names='value')\n",
+    "\n",
+    "# ----------------------------------------------------------\n",
+    "# Mouse interaction: drag ANY data point (x AND y)\n",
+    "# ----------------------------------------------------------\n",
+    "def on_pick(event):\n",
+    "    global selected_point\n",
+    "    if event.artist is scat_reg:\n",
+    "        if len(event.ind):\n",
+    "            selected_point = event.ind[0]\n",
+    "            # Highlight selected point\n",
+    "            colors_list = [colors['secondary'] if i == selected_point else colors['residual']\n",
+    "                          for i in range(len(x_data))]\n",
+    "            scat_reg.set_color(colors_list)\n",
+    "            fig.canvas.draw_idle()\n",
+    "\n",
+    "def on_motion(event):\n",
+    "    global selected_point, x_data, y_data\n",
+    "    if selected_point is None:\n",
+    "        return\n",
+    "    if event.inaxes is not ax_reg:\n",
+    "        return\n",
+    "    if event.xdata is None or event.ydata is None:\n",
+    "        return\n",
+    "    \n",
+    "    # Update BOTH x and y coordinates of the dragged point\n",
+    "    x_data[selected_point] = event.xdata\n",
+    "    y_data[selected_point] = event.ydata\n",
+    "    #x_data = np.sort(x_data)  # Keep sorted for nicer plots\n",
+    "    update_plots()\n",
+    "\n",
+    "def on_release(event):\n",
+    "    global selected_point\n",
+    "    if selected_point is not None:\n",
+    "        scat_reg.set_color(colors['residual'])\n",
+    "        fig.canvas.draw_idle()\n",
+    "    selected_point = None\n",
+    "\n",
+    "fig.canvas.mpl_connect('pick_event', on_pick)\n",
+    "fig.canvas.mpl_connect('motion_notify_event', on_motion)\n",
+    "fig.canvas.mpl_connect('button_release_event', on_release)\n",
+    "\n",
+    "# ----------------------------------------------------------\n",
+    "# Layout\n",
+    "# ----------------------------------------------------------\n",
+    "controls = widgets.HBox([\n",
+    "    widgets.Box([dist_selector], layout=widgets.Layout(margin='0 10px 0 0')),\n",
+    "    widgets.Box([seed_input], layout=widgets.Layout(margin='0 10px 0 0')),\n",
+    "    widgets.Box([n_points_input], layout=widgets.Layout(margin='0 10px 0 0')),\n",
+    "    reset_button\n",
+    "])\n",
+    "\n",
+    "display(widgets.VBox([controls, explanation_out]))\n",
+    "update_plots()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69cf0a07-bbd9-417f-98ba-be7b88cac8d4",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
