separate the former 2 cells into two notebooks due to mybinder issues

--- a/cook-regr.ipynb
+++ b/cook-regr.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff7d95df-63f3-4da2-9f10-03049bee432b",
+   "id": "093b8919-3009-445f-9e1e-b38b4bcfc5b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,8 @@
     "    'text': '#212121',\n",
     "    'residual': '#1976D2',\n",
     "    'leverage': '#00796B',\n",
-    "    'cook': '#D32F2F'\n",
+    "    'cook': '#D32F2F',\n",
+    "    'regression': '#D32F2F'\n",
     "}\n",
     "\n",
     "rng = np.random.default_rng(1337)\n",
@@ -71,53 +72,36 @@
     "# ----------------------------------------------------------\n",
     "# Data generation\n",
     "# ----------------------------------------------------------\n",
-    "def generate_residuals(n=15, distribution='normal', seed=None):\n",
+    "def generate_data(n=15, distribution='normal', seed=None):\n",
     "    global rng\n",
     "    if seed is not None:\n",
     "        rng = np.random.default_rng(seed)\n",
+    "    \n",
     "    if distribution == 'normal':\n",
-    "        r = rng.normal(0.0, 1.0, n)\n",
+    "        x = np.sort(rng.normal(50, 20, n))\n",
+    "        y = 2 + 0.8 * x + rng.normal(0, 8, n)\n",
     "    elif distribution == 'unequal':\n",
-    "        indices = np.arange(1, n + 1)\n",
-    "        std_devs = indices**2 / 10.0\n",
-    "        r = rng.normal(0, std_devs)\n",
+    "        x = np.sort(np.linspace(10, 90, n) + rng.normal(0, 2, n))\n",
+    "        y = 2 + 0.8 * x + rng.normal(0, x/10, n)  # Heteroscedasticity\n",
     "    elif distribution == 'data':\n",
-    "        r = np.array([\n",
-    "    -2.17658385,  2.03009250, -6.41091455,  4.68608501,  1.48087367,\n",
-    "    -2.74978111, -3.62045247,  3.18808875, -0.64610520,  2.04234279,\n",
-    "    -0.89895020,  4.36047168, -3.17865391,  4.72311986,  0.03155127,\n",
-    "    -6.65168538, -1.17132278,  4.12482518, -1.05669991, -0.10275874,\n",
-    "    -1.03591249,  0.20253550,  1.32856741,  5.46125909,  1.84335607,\n",
-    "     1.05136890, -4.75117357,  0.57043852, -1.62379894, -1.05018311\n",
-    "])\n",
+    "        x = np.array([10.49,  6.13,  5.17, 13.63,  8.96,  7.74,  7.10,  9.88, 11.84, 11.85,\n",
+    "     8.83, 10.96, 16.56,  2.76,  3.35,  8.01, 13.42,  9.45, 14.55,  9.37,\n",
+    "    11.13, 11.14, 11.23,  7.54,  6.56,  9.73,  8.20, 12.12,  9.57,  9.74])\n",
+    "        y = np.array([12.49, 11.66,  2.11, 22.98, 14.38,  8.74,  7.13, 17.15, 15.58, 18.28,\n",
+    "    11.85, 19.57, 18.50, 10.46,  6.45,  5.15, 16.88, 17.59, 18.30, 13.27,\n",
+    "    14.37, 15.62, 16.85, 16.72, 11.97, 14.84,  7.27, 17.12, 11.98, 12.75])\n",
     "    else:\n",
-    "        r = rng.normal(0.0, 1.0, n)\n",
-    "    return r\n",
-    "\n",
-    "def generate_predicted(n=15, distribution='normal'):\n",
-    "    global rng\n",
-    "    if distribution == 'data':\n",
-    "        x = np.array([\n",
-    "    14.666584,  9.629908,  8.520915, 18.293915, 12.899126,\n",
-    "    11.489781, 10.750452, 13.961911, 16.226105, 16.237657,\n",
-    "    12.748950, 15.209528, 21.678654,  5.736880,  6.418449,\n",
-    "    11.801685, 18.051323, 13.465175, 19.356700, 13.372759,\n",
-    "    15.405912, 15.417465, 15.521433, 11.258741, 10.126644,\n",
-    "    13.788631, 12.021174, 16.549561, 13.603799, 13.800183\n",
-    "])\n",
-    "    elif distribution == 'unequal':\n",
-    "        x = np.linspace(10, 90, n) + rng.normal(0,2,n)\n",
-    "    else:\n",
-    "        x = rng.normal(10,90,n)\n",
-    "    return x\n",
+    "        x = np.sort(rng.normal(50, 20, n))\n",
+    "        y = 2 + 0.8 * x + rng.normal(0, 8, n)\n",
+    "    \n",
+    "    return x, y\n",
     "\n",
     "# ----------------------------------------------------------\n",
     "# Initial data\n",
     "# ----------------------------------------------------------\n",
     "n_points = 15\n",
     "distribution = 'normal'\n",
-    "x_hat = generate_predicted(n_points, distribution)\n",
-    "residuals = generate_residuals(n_points, distribution=distribution, seed=42)\n",
+    "x_data, y_data = generate_data(n_points, distribution=distribution, seed=42)\n",
     "\n",
     "selected_point = None\n",
     "\n",
@@ -133,63 +117,65 @@
     "plt.rcParams['axes.edgecolor'] = '#BDBDBD'\n",
     "plt.rcParams['axes.linewidth'] = 1.2\n",
     "\n",
-    "fig, (ax_resid, ax_lev, ax_cook) = plt.subplots(3, 1, figsize=(7.5, 9), sharex=True)\n",
-    "fig.suptitle('Interactive Residuals, Leverage, and Cook\\'s Distance', fontsize=15, fontweight='bold', y=0.98)\n",
+    "fig, (ax_reg, ax_lev, ax_cook) = plt.subplots(3, 1, figsize=(7.5, 9), sharex=False)\n",
+    "fig.suptitle('Interactive Regression Analysis', fontsize=15, fontweight='bold', y=0.98)\n",
     "\n",
     "# ----------------------------------------------------------\n",
-    "# Helper: compute leverage and Cook's distance\n",
+    "# Helper: compute regression, residuals, leverage, and Cook's distance\n",
     "# ----------------------------------------------------------\n",
-    "def compute_leverage_and_cook(x, residuals):\n",
-    "    \"\"\"\n",
-    "    Simple linear model with intercept:\n",
-    "        y = beta0 + beta1 * x + error\n",
-    "    residuals given, x given; use standard hat matrix.\n",
-    "    Leverage: h_ii\n",
-    "    Cook's distance: D_i = e_i^2 / (p * MSE) * h_ii / (1 - h_ii)^2\n",
-    "    with p=2 (intercept + slope).\n",
-    "    \"\"\"\n",
+    "def compute_regression_stats(x, y):\n",
+    "    \"\"\"Compute regression line, residuals, leverage, and Cook's distance\"\"\"\n",
+    "    # Linear regression: y = beta0 + beta1 * x\n",
     "    X = np.column_stack([np.ones_like(x), x])\n",
-    "    # Hat matrix H = X (X'X)^{-1} X'\n",
+    "    beta = np.linalg.lstsq(X, y, rcond=None)[0]\n",
+    "    y_hat = X @ beta\n",
+    "    residuals = y - y_hat\n",
+    "    \n",
+    "    # Leverage (hat values)\n",
     "    XtX_inv = np.linalg.inv(X.T @ X)\n",
     "    H = X @ XtX_inv @ X.T\n",
     "    h = np.diag(H)\n",
-    "\n",
-    "    n = len(x)\n",
-    "    p = 2\n",
+    "    \n",
+    "    # Cook's distance\n",
+    "    n, p = len(x), 2\n",
     "    mse = np.sum(residuals**2) / max(n - p, 1)\n",
-    "    cook = (residuals**2 / (p * max(mse, 1e-12))) * (h / (1.0 - h)**2)\n",
-    "    return h, cook\n",
+    "    cooks = (residuals**2 / (p * max(mse, 1e-12))) * (h / (1 - h)**2)\n",
+    "    \n",
+    "    return beta, y_hat, residuals, h, cooks\n",
     "\n",
     "# ----------------------------------------------------------\n",
     "# Initial plots\n",
     "# ----------------------------------------------------------\n",
-    "# 1) Residuals vs predicted\n",
-    "scat_resid = ax_resid.scatter(x_hat, residuals, s=60, c=colors['residual'],\n",
-    "                              alpha=0.85, edgecolor='white', linewidth=1.2, picker=5)\n",
-    "ax_resid.axhline(0, color='#9E9E9E', linestyle='--', linewidth=1)\n",
-    "ax_resid.set_ylabel('Residuals', fontweight='bold')\n",
-    "ax_resid.set_title('Residuals vs predicted $\\\\hat{y}_i$')\n",
-    "ax_resid.grid(True, linestyle='--', alpha=0.6, color=colors['grid'])\n",
+    "beta, y_hat, residuals, leverages, cooks = compute_regression_stats(x_data, y_data)\n",
+    "\n",
+    "# 1) Regression scatter + line\n",
+    "scat_reg = ax_reg.scatter(x_data, y_data, s=60, c=colors['residual'],\n",
+    "                         alpha=0.85, edgecolor='white', linewidth=1.2, picker=5, zorder=5)\n",
+    "line_reg, = ax_reg.plot(x_data, y_hat, color=colors['regression'], \n",
+    "                       linewidth=3, label='Regression', zorder=4)\n",
+    "ax_reg.set_ylabel('y', fontweight='bold')\n",
+    "ax_reg.set_title('Regression: Drag points to refit line')\n",
+    "ax_reg.grid(True, linestyle='--', alpha=0.6, color=colors['grid'])\n",
+    "\n",
     "\n",
     "# 2) Leverage plot\n",
-    "leverages, cooks = compute_leverage_and_cook(x_hat, residuals)\n",
-    "scat_lev = ax_lev.scatter(x_hat, leverages, s=60, c=colors['leverage'],\n",
-    "                          alpha=0.85, edgecolor='white', linewidth=1.2)\n",
+    "scat_lev = ax_lev.scatter(x_data, leverages, s=60, c=colors['leverage'],\n",
+    "                         alpha=0.85, edgecolor='white', linewidth=1.2)\n",
+    "#ax_lev.axhline(np.mean(leverages), color='#9E9E9E', linestyle='--', linewidth=1)\n",
     "ax_lev.set_ylabel('Leverage $h_{ii}$', fontweight='bold')\n",
     "ax_lev.set_title('Leverage of each point')\n",
     "ax_lev.grid(True, linestyle='--', alpha=0.6, color=colors['grid'])\n",
     "\n",
     "# 3) Cook's distance plot\n",
-    "scat_cook = ax_cook.scatter(x_hat, cooks, s=60, c=colors['cook'],\n",
-    "                            alpha=0.85, edgecolor='white', linewidth=1.2)\n",
-    "ax_cook.set_ylabel('Cook\\'s distance', fontweight='bold')\n",
-    "ax_cook.set_xlabel('Predicted $\\\\hat{y}_i$', fontweight='bold')\n",
+    "scat_cook = ax_cook.scatter(x_data, cooks, s=60, c=colors['cook'],\n",
+    "                           alpha=0.85, edgecolor='white', linewidth=1.2)\n",
+    "ax_cook.set_ylabel(\"Cook's distance\", fontweight='bold')\n",
+    "ax_cook.set_xlabel('x', fontweight='bold')\n",
     "ax_cook.set_title('Cook\\'s distance of each point')\n",
     "ax_cook.grid(True, linestyle='--', alpha=0.6, color=colors['grid'])\n",
     "\n",
+    "\n",
     "fig.tight_layout(rect=[0, 0, 1, 0.95])\n",
-    "fig.canvas.layout.width = '750px'\n",
-    "fig.canvas.layout.height = '700px'\n",
     "\n",
     "# ----------------------------------------------------------\n",
     "# Widgets and explanation box\n",
@@ -197,9 +183,9 @@
     "explanation_out = widgets.Output()\n",
     "\n",
     "dist_selector = widgets.Dropdown(\n",
-    "    options=[('Normal residuals', 'normal'),\n",
+    "    options=[('Normal', 'normal'),\n",
     "             ('Unequal variance', 'unequal'),\n",
-    "             ('Grube', 'data')],\n",
+    "             ('Example data', 'data')],\n",
     "    value='normal',\n",
     "    description='Preset:',\n",
     "    style={'description_width': 'initial'},\n",
@@ -219,7 +205,7 @@
     "n_points_input = widgets.BoundedIntText(\n",
     "    value=n_points,\n",
     "    min=5,\n",
-    "    max=200,\n",
+    "    max=50,\n",
     "    step=1,\n",
     "    description='Points:',\n",
     "    style={'description_width': 'initial'},\n",
@@ -227,7 +213,7 @@
     ")\n",
     "\n",
     "reset_button = widgets.Button(\n",
-    "    description='Reset residuals',\n",
+    "    description='Reset data',\n",
     "    layout=widgets.Layout(width='150px', height='32px'),\n",
     ")\n",
     "reset_button.add_class('widget-button')\n",
@@ -236,111 +222,102 @@
     "# Update functions\n",
     "# ----------------------------------------------------------\n",
     "def update_plots():\n",
-    "    global residuals, x_hat, scat_resid, scat_lev, scat_cook\n",
-    "\n",
-    "    # Recompute leverage and Cook's distance\n",
-    "    h, c = compute_leverage_and_cook(x_hat, residuals)\n",
-    "\n",
-    "    # Update residual scatter\n",
-    "    scat_resid.set_offsets(np.column_stack([x_hat, residuals]))\n",
-    "\n",
-    "    # Update leverage and Cook scatter\n",
-    "    scat_lev.set_offsets(np.column_stack([x_hat, h]))\n",
-    "    scat_cook.set_offsets(np.column_stack([x_hat, c]))\n",
-    "\n",
-    "    # Adjust y-limits for residuals\n",
-    "    pad_r = 1.1\n",
-    "    ax_resid.set_ylim(residuals.min()*pad_r-0.5, residuals.max()*pad_r+0.5)\n",
-    "\n",
-    "    # Simple padding for leverage and Cook\n",
+    "    global x_data, y_data, scat_reg, scat_lev, scat_cook, line_reg\n",
+    "    \n",
+    "    # Recompute everything\n",
+    "    beta, y_hat, residuals, h, c = compute_regression_stats(x_data, y_data)\n",
+    "    \n",
+    "    # Update regression plot\n",
+    "    scat_reg.set_offsets(np.column_stack([x_data, y_data]))\n",
+    "    line_reg.set_data(x_data, y_hat)\n",
+    "    \n",
+    "    # Update diagnostics\n",
+    "    scat_lev.set_offsets(np.column_stack([x_data, h]))\n",
+    "    scat_cook.set_offsets(np.column_stack([x_data, c]))\n",
+    "    \n",
+    "    # Adjust limits\n",
+    "    margin = 0.05\n",
+    "    x_range = x_data.max() - x_data.min()\n",
+    "    ax_reg.set_xlim(x_data.min() - 0.1*x_range, x_data.max() + 0.1*x_range)\n",
+    "    y_range = y_data.max() - y_data.min()\n",
+    "    ax_reg.set_ylim(y_data.min() - 0.1*y_range, y_data.max() + 0.1*y_range)\n",
+    "    \n",
+    "    ax_lev.set_xlim(x_data.min() - 0.1*x_range, x_data.max() + 0.1*x_range)\n",
     "    ax_lev.set_ylim(max(0, h.min() - 0.02), h.max() + 0.05)\n",
-    "    ax_cook.set_ylim(max(0, c.min() - 0.02), c.max() + 0.05)\n",
-    "\n",
-    "    # Explanation text\n",
+    "    ax_cook.set_xlim(x_data.min() - 0.1*x_range, x_data.max() + 0.1*x_range)\n",
+    "    ax_cook.set_ylim(0, max(c.max() * 1.1, 0.1))\n",
+    "    \n",
+    "    # Update explanation\n",
+    "    r2 = 1 - np.sum(residuals**2) / np.sum((y_data - np.mean(y_data))**2)\n",
     "    with explanation_out:\n",
     "        explanation_out.clear_output(wait=True)\n",
     "        display(HTML(f\"\"\"\n",
     "        <div class=\"explanation-container\">\n",
-    "            <h4 style=\"margin:0 0 8px 0; color:{colors['primary']}\">What you see:</h4>\n",
+    "            <h4 style=\"margin:0 0 8px 0; color:{colors['primary']}\">Live Statistics:</h4>\n",
+    "            <p><b>Regression:</b> $\\\\hat{{y}} = {beta[1]:.2f}x + {beta[0]:.2f}$ | \n",
+    "               <b>R²:</b> {r2:.3f} | \n",
+    "               <b>MSE:</b> {np.mean(residuals**2):.2f}</p>\n",
     "            <ul style=\"margin:4px 0 0 18px; padding:0;\">\n",
-    "                <li><b>Top</b>: Residuals vs predicted $\\\\hat{{y}}_i$; drag points vertically to change residuals.</li>\n",
-    "                <li><b>Middle</b>: Leverage $h_{{ii}}$ from a simple linear model with intercept.</li>\n",
-    "                <li><b>Bottom</b>: Cook's distances.</li>\n",
+    "                <li><b>Top:</b> Data + regression line (drag any point)</li>\n",
+    "                <li><b>Middle:</b> Leverage values $h_{{ii}}$</li>\n",
+    "                <li><b>Bottom:</b> Cook's distances (influence)</li>\n",
     "            </ul>\n",
     "        </div>\n",
     "        \"\"\"))\n",
-    "\n",
+    "    \n",
     "    fig.canvas.draw_idle()\n",
     "\n",
-    "def reset_residuals(_=None):\n",
-    "    global residuals, x_hat, n_points, distribution\n",
+    "def reset_data(_=None):\n",
+    "    global x_data, y_data, n_points, distribution\n",
     "    distribution = dist_selector.value\n",
     "    n_points = n_points_input.value\n",
     "    seed = seed_input.value\n",
-    "\n",
-    "    x_hat = generate_predicted(n_points, distribution)\n",
-    "    residuals = generate_residuals(n_points, distribution=distribution, seed=seed)\n",
-    "\n",
-    "    # Rebuild artists with new lengths\n",
-    "    scat_resid.set_offsets(np.column_stack([x_hat, residuals]))\n",
-    "    h, c = compute_leverage_and_cook(x_hat, residuals)\n",
-    "    scat_lev.set_offsets(np.column_stack([x_hat, h]))\n",
-    "    scat_cook.set_offsets(np.column_stack([x_hat, c]))\n",
-    "    ax_resid.set_xlim(x_hat.min() - 1, x_hat.max() + 1)\n",
-    "\n",
+    "    \n",
+    "    x_data, y_data = generate_data(n_points, distribution=distribution, seed=seed)\n",
     "    update_plots()\n",
     "\n",
-    "def on_dist_change(change):\n",
+    "def on_param_change(change):\n",
     "    if change[\"name\"] == \"value\":\n",
-    "        reset_residuals()\n",
+    "        reset_data()\n",
     "\n",
-    "def on_seed_change(change):\n",
-    "    if change[\"name\"] == \"value\":\n",
-    "        reset_residuals()\n",
-    "\n",
-    "def on_n_points_change(change):\n",
-    "    if change[\"name\"] == \"value\":\n",
-    "        reset_residuals()\n",
-    "\n",
-    "reset_button.on_click(reset_residuals)\n",
-    "dist_selector.observe(on_dist_change, names='value')\n",
-    "seed_input.observe(on_seed_change, names='value')\n",
-    "n_points_input.observe(on_n_points_change, names='value')\n",
+    "reset_button.on_click(reset_data)\n",
+    "dist_selector.observe(on_param_change, names='value')\n",
+    "seed_input.observe(on_param_change, names='value')\n",
+    "n_points_input.observe(on_param_change, names='value')\n",
     "\n",
     "# ----------------------------------------------------------\n",
-    "# Mouse interaction: drag residual points vertically\n",
+    "# Mouse interaction: drag ANY data point (x AND y)\n",
     "# ----------------------------------------------------------\n",
     "def on_pick(event):\n",
     "    global selected_point\n",
-    "    if event.artist is scat_resid:\n",
+    "    if event.artist is scat_reg:\n",
     "        if len(event.ind):\n",
     "            selected_point = event.ind[0]\n",
-    "            # highlight selected\n",
+    "            # Highlight selected point\n",
     "            colors_list = [colors['secondary'] if i == selected_point else colors['residual']\n",
-    "                           for i in range(len(residuals))]\n",
-    "            scat_resid.set_color(colors_list)\n",
+    "                          for i in range(len(x_data))]\n",
+    "            scat_reg.set_color(colors_list)\n",
     "            fig.canvas.draw_idle()\n",
     "\n",
     "def on_motion(event):\n",
-    "    global selected_point, residuals, x_hat\n",
+    "    global selected_point, x_data, y_data\n",
     "    if selected_point is None:\n",
     "        return\n",
-    "    if event.inaxes is not ax_resid:\n",
+    "    if event.inaxes is not ax_reg:\n",
     "        return\n",
-    "    if event.ydata is None:\n",
+    "    if event.xdata is None or event.ydata is None:\n",
     "        return\n",
-    "    # Move only vertically -> update residual\n",
-    "    residuals[selected_point] = event.ydata\n",
-    "    if event.xdata is None:\n",
-    "        return\n",
-    "    x_hat[selected_point] = event.xdata\n",
+    "    \n",
+    "    # Update BOTH x and y coordinates of the dragged point\n",
+    "    x_data[selected_point] = event.xdata\n",
+    "    y_data[selected_point] = event.ydata\n",
+    "    #x_data = np.sort(x_data)  # Keep sorted for nicer plots\n",
     "    update_plots()\n",
     "\n",
     "def on_release(event):\n",
     "    global selected_point\n",
     "    if selected_point is not None:\n",
-    "        # reset colors\n",
-    "        scat_resid.set_color(colors['residual'])\n",
+    "        scat_reg.set_color(colors['residual'])\n",
     "        fig.canvas.draw_idle()\n",
     "    selected_point = None\n",
     "\n",
@@ -352,12 +329,9 @@
     "# Layout\n",
     "# ----------------------------------------------------------\n",
     "controls = widgets.HBox([\n",
-    "    widgets.Box([dist_selector],\n",
-    "                layout=widgets.Layout(margin='0 10px 0 0')),\n",
-    "    widgets.Box([seed_input],\n",
-    "                layout=widgets.Layout(margin='0 10px 0 0')),\n",
-    "    widgets.Box([n_points_input],\n",
-    "                layout=widgets.Layout(margin='0 10px 0 0')),\n",
+    "    widgets.Box([dist_selector], layout=widgets.Layout(margin='0 10px 0 0')),\n",
+    "    widgets.Box([seed_input], layout=widgets.Layout(margin='0 10px 0 0')),\n",
+    "    widgets.Box([n_points_input], layout=widgets.Layout(margin='0 10px 0 0')),\n",
     "    reset_button\n",
     "])\n",
     "\n",
